--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
   </div>
 
   <footer>
-    تم الإنشاء بواسطة Apex Edge — MaamalTamayuz · معمل التميز · نسخة تجريبية
+    تم الإنشاء بواسطة Lmilaat — MaamalTamayuz · معمل التميز · نسخة تجريبية
   </footer>
 
   <script>
